--- a/index.html
+++ b/index.html
@@ -1,94 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .fundo{
-            background-image: linear-gradient(45deg, black, navy);
-            height: 100vh;
-            color: white;
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif
-        }
-        .calculadora{
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.8);
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 15px;
-            padding: 15px;
-        }
-        .Botao{
-            width: 50px;
-            height: 50px;
-            font-size: 25px;
-            cursor: pointer;
-            margin: 3px;
-            background-color: rgb(31, 31, 31);
-            border: none;
-            color: #fff
-        }
-        .Botao:hover{
-            background-color: black;
-        }
-        #Resultado{
-            background-color: #fff;
-            width: 207px;
-            height: 30px;
-            margin: 5px;
-            font-size: 25px;
-            color: black;
-            text-align: right;
-            padding: 5px;
-        }
-    </style>
-</head>
-<body>
+    <script src="./style.css"></script>
+  </head>
+  <body>
     <div class="fundo">
-        <h1>Pedro Enrico</h1>
-        <div class="calculadora">
-            <h1>Calculadora</h1>
-            <p id="Resultado"></p>
-            <table>
-                <tr>
-                    <td><button class="Botao" onclick="clean()">C</button></td>
-                    <td><button class="Botao" onclick="back()"><</button></td>
-                    <td><button class="Botao" onclick="insert('/')">/</button></td>
-                    <td><button class="Botao" onclick="insert('*')">*</button></td>
-                </tr>
-                <tr>
-                    <td><button class="Botao" onclick="insert('7')">7</button></td>
-                    <td><button class="Botao" onclick="insert('8')">8</button></td>
-                    <td><button class="Botao" onclick="insert('9')">9</button></td>
-                    <td><button class="Botao" onclick="insert('-')">-</button></td>
-                </tr>
-                <tr>
-                    <td><button class="Botao" onclick="insert('4')">4</button></td>
-                    <td><button class="Botao" onclick="insert('5')">5</button></td>
-                    <td><button class="Botao" onclick="insert('6')">6</button></td>
-                    <td><button class="Botao" onclick="insert('+')">+</button></td>
-                </tr>
-                <tr>
-                    <td><button class="Botao" onclick="insert('1')">1</button></td>
-                    <td><button class="Botao" onclick="insert('2')">2</button></td>
-                    <td><button class="Botao" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button class="Botao" style="height: 106px;" onclick="calcular()">=</button></td>
-                </tr>
-                <tr>
-                    <td colspan="2"><button class="Botao" style="width: 106px;" onclick="insert('0')">0</button></td>
-                    <td><button  class="Botao" onclick="insert('.')">.</button></td>
-                </tr>
-            </table>
-        </div>
+      <h1>Pedro Enrico</h1>
+      <div class="calculadora">
+        <h1>Calculadora</h1>
+        <p id="Resultado"></p>
+        <table>
+          <tr>
+            <td><button class="Botao" onclick="clean()">C</button></td>
+            <td><button class="Botao" onclick="back()"><</button></td>
+            <td><button class="Botao" onclick="insert('/')">/</button></td>
+            <td><button class="Botao" onclick="insert('*')">*</button></td>
+          </tr>
+          <tr>
+            <td><button class="Botao" onclick="insert('7')">7</button></td>
+            <td><button class="Botao" onclick="insert('8')">8</button></td>
+            <td><button class="Botao" onclick="insert('9')">9</button></td>
+            <td><button class="Botao" onclick="insert('-')">-</button></td>
+          </tr>
+          <tr>
+            <td><button class="Botao" onclick="insert('4')">4</button></td>
+            <td><button class="Botao" onclick="insert('5')">5</button></td>
+            <td><button class="Botao" onclick="insert('6')">6</button></td>
+            <td><button class="Botao" onclick="insert('+')">+</button></td>
+          </tr>
+          <tr>
+            <td><button class="Botao" onclick="insert('1')">1</button></td>
+            <td><button class="Botao" onclick="insert('2')">2</button></td>
+            <td><button class="Botao" onclick="insert('3')">3</button></td>
+            <td rowspan="2">
+              <button class="Botao" style="height: 106px" onclick="calcular()">
+                =
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <button class="Botao" style="width: 106px" onclick="insert('0')">
+                0
+              </button>
+            </td>
+            <td><button class="Botao" onclick="insert('.')">.</button></td>
+          </tr>
+        </table>
+      </div>
     </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
