--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         </table>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
   </body>
 </html>
